Added correct keyword.

--- a/@celastrina/captcha/package.json
+++ b/@celastrina/captcha/package.json
@@ -15,7 +15,9 @@
     "Azure",
     "Function",
     "Celatrina",
-    "Timer"
+    "HTTP",
+    "CAPTCHA",
+    "RECAPTCHA"
   ],
   "author": "Robert R Murrell",
   "license": "MIT",
