--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
-      working-directory: "@celastrina/http"
+      working-directory: "@celastrina/captcha"
