--- a/@celastrina/captcha/package.json
+++ b/@celastrina/captcha/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/celastrina/captcha#readme",
   "dependencies": {
-    "@celastrina/core": "^4.12.37",
+    "@celastrina/core": "^4.13.40",
+    "@celastrina/http": "^4.7.18",
+    "axios": "^0.24.0",
     "moment": "^2.29.1"
   },
   "devDependencies": {
