--- a/@celastrina/captcha/package.json
+++ b/@celastrina/captcha/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@celastrina/timer",
+  "name": "@celastrina/captcha",
   "version": "1.0.0",
   "description": "Timer Function Package for Celastrina",
   "main": "Captcha.js",
@@ -29,6 +29,7 @@
     "@celastrina/core": "^4.14.40",
     "@celastrina/http": "^4.8.19",
     "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "moment": "^2.29.3"
   },
   "devDependencies": {
